; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mpr/extr_mpr.c_InitFunctionPtrs.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mpr/extr_mpr.c_InitFunctionPtrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"mpr.dll\00", align 1
@WNetCachePassword = common dso_local global i32 0, align 4
@WNetGetCachedPassword = common dso_local global i32 0, align 4
@WNetEnumCachedPasswords = common dso_local global i32 0, align 4
@WNetRemoveCachedPassword = common dso_local global i32 0, align 4
@WNetUseConnectionA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @InitFunctionPtrs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @InitFunctionPtrs() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @GetModuleHandleA(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* @WNetCachePassword, align 4
  %4 = call i32 @MPR_GET_PROC(i32 %3)
  %5 = load i32, i32* @WNetGetCachedPassword, align 4
  %6 = call i32 @MPR_GET_PROC(i32 %5)
  %7 = load i32, i32* @WNetEnumCachedPasswords, align 4
  %8 = call i32 @MPR_GET_PROC(i32 %7)
  %9 = load i32, i32* @WNetRemoveCachedPassword, align 4
  %10 = call i32 @MPR_GET_PROC(i32 %9)
  %11 = load i32, i32* @WNetUseConnectionA, align 4
  %12 = call i32 @MPR_GET_PROC(i32 %11)
  ret void
}

declare dso_local i32 @GetModuleHandleA(i8*) #1

declare dso_local i32 @MPR_GET_PROC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
